force-app/main/default/objects/Funding_Opportunity__c/Funding_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Funding Opportunity</label>
    <nameField>
        <label>Funding Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Opportunitys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>