force-app/main/default/objects/Funding_Opportunity__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Funding Opportunitys</relationshipLabel>
    <relationshipName>Funding_Opportunitys</relationshipName>
    <type>Lookup</type>
</CustomField>