force-app/main/default/objects/Funding_Opportunity__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>DSF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>