force-app/main/default/objects/Funding_Opportunity__c/fields/TotalFunds__c.field-meta.xml
<CustomField>
    <fullName>TotalFunds__c</fullName>
    <label>Total Funds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>